--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ body {
   margin: 20px auto;
   max-width: 40em;
 }
+p {
+  color: #555;	
+  font-size: 15px;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h3{
+  color: black;
+}  
+
+h2{
+  color: black;
+}  
